--- a/src/app/projects/pages/projects/projects.component.html
+++ b/src/app/projects/pages/projects/projects.component.html
@@ -38,7 +38,7 @@
             <td>
                 <button type="button" class="btn btn-light">Enabled</button>
             </td>
-            <td><i class="fas fa-ellipsis-v"></i></td>
+            <td><i (click)="edit()" class="fas fa-ellipsis-v"></i></td>
           </tr>
           <tr>
             <td>
@@ -49,7 +49,7 @@
             <td>Walt Cosani</td>
             <td><i class="fas fa-user"></i> Ignacio Trufa</td>
             <td><button type="button" class="btn btn-light">Enabled</button></td>
-            <td><i class="fas fa-ellipsis-v"></i></td>
+            <td><i (click)="edit()" class="fas fa-ellipsis-v"></i></td>
           </tr>
           <tr>
             <td>
